1. Load img base on 2. plot model structure

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,8 @@ gym = "*"
 pyglet = "*"
 cloudpickle = "*"
 beautifulsoup4 = "*"
+graphviz = "*"
+pydot = "*"
 
 [requires]
 python_version = "3.7"
